--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "$schema": "https://json.schemastore.org/package",
   "name": "varet",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A CLI tool to generate your defaults in new projects.",
   "repository": "https://github.com/tarikyildizci/varet.git",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": {
     "email": "tarikyyildizci@gmail.com",
     "name": "Tarık Yusuf Yıldızcı",
