--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "$schema": "https://json.schemastore.org/package",
   "name": "varet",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A CLI tool to generate your defaults in new projects.",
   "repository": "https://github.com/tarikyildizci/varet.git",
   "type": "module",
   "main": "dist/index.js",
+  "files": [
+    "dist/**/*"
+  ],
   "author": {
     "email": "tarikyyildizci@gmail.com",
     "name": "Tarık Yusuf Yıldızcı",
