--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "$schema": "https://json.schemastore.org/package",
   "name": "varet",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "A CLI tool to generate your defaults in new projects.",
   "repository": "https://github.com/tarikyildizci/varet.git",
   "type": "module",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "dist/**/*"
+    "dist"
   ],
   "author": {
     "email": "tarikyyildizci@gmail.com",
@@ -19,13 +20,18 @@
     "varet": "./dist/index.js"
   },
   "scripts": {
+    "hak": "node dist/index.js",
     "build": "tsc && tsc-alias",
+    "bhak": "yarn build && yarn hak",
     "format": "prettier --write .",
     "ts": "tsc --noEmit"
   },
   "dependencies": {
     "@inquirer/prompts": "^7.1.0",
-    "commander": "^12.1.0"
+    "@varet/core": "^0.0.7",
+    "cfonts": "^3.3.0",
+    "commander": "^12.1.0",
+    "ora": "^8.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
