--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/package",
   "name": "varet",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A CLI tool to generate your defaults in new projects.",
   "repository": "https://github.com/tarikyildizci/varet.git",
   "type": "module",
@@ -22,6 +22,7 @@
   "scripts": {
     "hak": "node dist/index.js",
     "build": "tsc && tsc-alias",
+    "release": "yarn build && yarn publish",
     "bhak": "yarn build && yarn hak",
     "format": "prettier --write .",
     "ts": "tsc --noEmit"
