--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/package",
   "name": "varet",
-  "version": "0.1.6",
+  "version": "0.1.8",
   "description": "A CLI tool to generate your defaults in new projects.",
-  "repository": "https://github.com/tarikyildizci/varet.git",
+  "repository": "https://github.com/varetcli/varet",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
